# wolfCode

./: README.md  pyproject.toml  reinstall.sh
tests/inputs/: display_ascii.c  recursion.c
tests/outputs/: crl.c.audit.out  dsa.c.audit.out  dsa.c.out  dtls.c.audit.out  dtls.check.out  memory.c.audit.out  memory.c.out  oscp.c.check.out  quic.c.audit.out  quic.c.check.out  rsa.c.out
wolfcode/: __init__.py  check_coding_standards.py  config.py
wolfcode/output_schemas/: CodingStandardsReview.py  __init__.py
wolfcode/settings/: check_coding_standards_config.toml  coding_standards.toml
